--- a/main-app/src/App.css
+++ b/main-app/src/App.css
@@ -10,4 +10,15 @@ body {
 
 header {
   width: 100%;
+  height: 4em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: nowrap;
+  background-color: rgb(205, 240, 222);
+}
+
+header h1 {
+  padding: 0px;
+  margin: 0px;
 }
